@@ -1,20 +1,21 @@
 snowWrapper <-
-function(cl, seq, fun, cldata, name="cldata", lib=NULL, dir = NULL, evalq=NULL,
+function(cl, seq, fun, cldata, name="cldata", use.env=FALSE,
+lib=NULL, dir = NULL, evalq=NULL,
 size = 1, balancing=c("none", "load", "size", "both"), 
-rng.type=c("none", "RNGstream", "SPRNG"), cleanup=TRUE, unload=FALSE, ...)
+rng.type=c("none", "RNGstream", "SPRNG"), 
+cleanup=TRUE, unload=FALSE, ...)
 {
-    ## is name is NULL, .DcloneEnv is used to store the data
-    useEnv <- is.null(name)
     balancing <- match.arg(balancing)
     ## if object name exists in global env, make a copy as tmp, and put back in the end
-    if (!useEnv && exists(name, envir=.GlobalEnv)) {
+    if (!use.env && exists(name, envir=.GlobalEnv)) {
         assign("tmp", get(name, envir=.GlobalEnv))
         on.exit(rm(list=name, envir = .GlobalEnv), add=TRUE)
         on.exit(assign(name, tmp, envir = .GlobalEnv), add=TRUE)
     }
-    if (useEnv) {
-        assign(".DcloneEnv", as.environment(cldata), envir=.GlobalEnv)
-        name <- ".DcloneEnv"
+    if (use.env) {
+        if (is.null(name))
+            name <- ".DcloneEnv"
+        assign(name, as.environment(cldata), envir=.GlobalEnv)
     }
     ## loads lib on each worker
     if (!is.null(lib)) {
@@ -33,7 +34,6 @@ rng.type=c("none", "RNGstream", "SPRNG"), cleanup=TRUE, unload=FALSE, ...)
         if (cleanup)
             dirold <- clusterEvalQ(cl, getwd())
         dir <- rep(dir, length(cl))[1:length(cl)]
-#        eval(parse(text=paste("clusterEvalQ(cl, setwd('", dir, "'))", sep="")))
         dirnew <- lapply(dir, function(z) paste("setwd(\"", z, "\")", sep=""))
         parLapply(cl, dirnew, function(z) eval(parse(text=z)))
     }
@@ -43,7 +43,7 @@ rng.type=c("none", "RNGstream", "SPRNG"), cleanup=TRUE, unload=FALSE, ...)
             eval(parse(text=paste("clusterEvalQ(cl,", i, ")")))
     }
     ## place object name into global env (clusterExport can reach it)
-    if (!useEnv)
+    if (!use.env)
         assign(name, cldata, envir = .GlobalEnv)
     clusterExport(cl, name)
     ## parallel work done here according to balancing
@@ -53,12 +53,13 @@ rng.type=c("none", "RNGstream", "SPRNG"), cleanup=TRUE, unload=FALSE, ...)
         "size" = parLapplySB(cl, seq, size=size, fun, ...),
         "both" = parLapplySLB(cl, seq, size=size, fun, ...))
     if (cleanup) {
-        ## remove cldata
-        if (!useEnv) {
-            eval(parse(text=paste("clusterEvalQ(cl, rm(", name, "))")))
-        } else {
-            clusterEvalQ(cl, .DcloneEnv <- new.env(hash = FALSE, parent = .GlobalEnv))
-        }
+        ## remove cldata by name
+        eval(parse(text=paste("clusterEvalQ(cl, rm(", name, "))")))
+#        if (!use.env) {
+#            eval(parse(text=paste("clusterEvalQ(cl, rm(", name, "))")))
+#        } else {
+#            clusterEvalQ(cl, .DcloneEnv <- new.env(hash = FALSE, parent = .GlobalEnv))
+#        }
         ## set old dir
         if (!is.null(dir)) {
             dirold <- lapply(dirold, function(z) paste("setwd(\"", z, "\")", sep=""))
