@@ -35,6 +35,10 @@ Version 1.3-5, August 23, 2011
       packaged from pkg argument.
     * snowWrapper: if name=NULL, .DcloneEnv is used to store
       temporary data.
+    * Data cloning compatibile jagsModel and codaSamples
+      function added for sequential computations.
+      Both functions copied after rjags equivalents,
+      jags.model and coda.samples.
 
 Version 1.3-4, July 9, 2011
     * dc.fit: updating fixed (only updated after 2nd iteration).
